added grid styles to image gallery from mini projects

--- a/Mini Projects/image gallery/index.html
+++ b/Mini Projects/image gallery/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <!-- image gallery -->
-            <div class="grid gap-4 md:grid-cols-3">
+            <div class="grid gap-4 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
 
                 <!-- Image 1 -->
                 <div class="relative group">
