--- a/Mini Projects/login modal/index.html
+++ b/Mini Projects/login modal/index.html
@@ -45,7 +45,7 @@
                     <div class="font-thin text-cyan-700">Forgot password</div>
 
                     <button
-                        class="w-full md:w-auto flex justify-center items-center p-6 space-x-4 font-sans font-bold text-white rounded-md shadow-lg px-9 bg-cyan-700 shadow-cyan-100 hover:bg-opacity-90 shadow-sm hover:shadow-lg border transition hover:-translate-y-0.5 duration-150">
+                        class="w-full md:w-auto flex justify-center items-center p-6 space-x-4 font-sans font-bold text-white rounded-md shadow-lg px-9 bg-cyan-700 shadow-cyan-100 hover:bg-opacity-90 hover:shadow-lg border transition hover:-translate-y-0.5 duration-150">
                         <span>Next</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-7" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
