added hamburger I have added the hamburger menu icon for smaller screens and not for larger screens

--- a/Larger Projects/Loopstudio/index.html
+++ b/Larger Projects/Loopstudio/index.html
@@ -46,9 +46,15 @@
                         <div class="border px-2 w-0.8 border-white hidden group-hover:block mt-px duration-200"></div>
                     </div>
                 </div>
+                <div class="md:hidden text-white">
+                    <div class="hamburger flex flex-col">
+                        <div class="upper-row"></div>
+                        <div class="middle-row"></div>
+                        <div class="lower-row"></div>
+                    </div>
+                </div>
             </nav>
             <!-- mobile navitems -->
-
             <!-- middle hero -->
             <div
                 class="max-w-lg uppercase my-32 p-10 font-sans text-white border-2 md:p-10 md:m-32 md:mx-0 md:text-6xl text-4xl">
@@ -85,15 +91,16 @@
         <!-- outer container -->
         <div class="max-w-6xl container text-gray-900 my-32 px-8 mx-auto md:px-0">
             <!-- Creations header -->
-             <div class="flex justify-center mb-20 md:justify-between"> 
+            <div class="flex justify-center mb-20 md:justify-between">
                 <h2 class="text-4xl text-center uppercase md:text-left md:text-5xl">
                     our creations
                 </h2>
                 <!-- menu button -->
-                 <button class="uppercase hidden md:block px-6 tracking-wider py-1.5 text-black border border-black font-alata hover:bg-black hover:text-white duration-200 cursor-pointer">
+                <button
+                    class="uppercase hidden md:block px-6 tracking-wider py-1.5 text-black border border-black font-alata hover:bg-black hover:text-white duration-200 cursor-pointer">
                     See all
-                 </button>
-             </div>
+                </button>
+            </div>
         </div>
     </section>
 
